<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    tools:context=".MainActivity">

    <ImageButton
        android:id="@+id/btn_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:src="@drawable/ic_back" />

    <TextView
        android:id="@+id/txtRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="0dp"
        android:layout_marginTop="46dp"
        android:layout_marginRight="78dp"
        android:layout_marginBottom="9dp"
        android:text="@string/name5"
        android:textSize="20sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/txtT.t.k"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@+id/txtRegister"
        android:background="@drawable/frame_9"
        android:hint="@string/phone"
        android:paddingStart="10dp" />

    <EditText
        android:id="@+id/txtN.m.k"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@+id/txtT.t.k"
        android:layout_marginTop="13dp"
        android:layout_marginBottom="18dp"
        android:background="@drawable/frame_9"
        android:backgroundTint="#DCBB8A"
        android:hint="@string/email"
        android:paddingStart="10dp" />

    <EditText

        android:id="@+id/txtN.l.m.k"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@+id/txtN.m.k"
        android:background="@drawable/frame_9"
        android:hint="@string/fullname" />

    <EditText

        android:id="@+id/txtCoquan"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@+id/txtN.l.m.k"
        android:layout_marginTop="10dp"
        android:background="@drawable/frame_9"
        android:hint="@string/nameCoquan" />

    <EditText
        android:layout_marginTop="10dp"
        android:id="@+id/txtNhapmk"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@+id/txtCoquan"
        android:background="@drawable/frame_9"
        android:hint="@string/password" />


    <Button
        android:id="@+id/btn_continue"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtNhapmk"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_marginTop="24dp"
        android:text="Tiếp Tục" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btn_continue"
        android:layout_marginTop="90dp"
        android:text="@string/text2" />
</RelativeLayout>